--- a/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
+++ b/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
@@ -50,21 +50,17 @@
   <ItemGroup>
     <Compile Include="Database\MilkteaContext.cs" />
     <Compile Include="Database\MilkteaProvider.cs" />
-    <Compile Include="Migrations\201807030251318_duong_03072018.cs" />
-    <Compile Include="Migrations\201807030251318_duong_03072018.Designer.cs">
-      <DependentUpon>201807030251318_duong_03072018.cs</DependentUpon>
+    <Compile Include="Migrations\201807161046113_duong_8.cs" />
+    <Compile Include="Migrations\201807161046113_duong_8.Designer.cs">
+      <DependentUpon>201807161046113_duong_8.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201807040612445_duong_04072018.cs" />
-    <Compile Include="Migrations\201807040612445_duong_04072018.Designer.cs">
-      <DependentUpon>201807040612445_duong_04072018.cs</DependentUpon>
+    <Compile Include="Migrations\201807161257497_duong_565.cs" />
+    <Compile Include="Migrations\201807161257497_duong_565.Designer.cs">
+      <DependentUpon>201807161257497_duong_565.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201807040621281_duong_04072018_1.cs" />
-    <Compile Include="Migrations\201807040621281_duong_04072018_1.Designer.cs">
-      <DependentUpon>201807040621281_duong_04072018_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201807051007013_duong_05072018.cs" />
-    <Compile Include="Migrations\201807051007013_duong_05072018.Designer.cs">
-      <DependentUpon>201807051007013_duong_05072018.cs</DependentUpon>
+    <Compile Include="Migrations\201807161304540_duong_123.cs" />
+    <Compile Include="Migrations\201807161304540_duong_123.Designer.cs">
+      <DependentUpon>201807161304540_duong_123.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,17 +86,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201807030251318_duong_03072018.resx">
-      <DependentUpon>201807030251318_duong_03072018.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807161046113_duong_8.resx">
+      <DependentUpon>201807161046113_duong_8.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807040612445_duong_04072018.resx">
-      <DependentUpon>201807040612445_duong_04072018.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807161257497_duong_565.resx">
+      <DependentUpon>201807161257497_duong_565.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807040621281_duong_04072018_1.resx">
-      <DependentUpon>201807040621281_duong_04072018_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807051007013_duong_05072018.resx">
-      <DependentUpon>201807051007013_duong_05072018.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807161304540_duong_123.resx">
+      <DependentUpon>201807161304540_duong_123.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
