--- a/MilkTeaShop/Infrastructure.Identity/Infrastructure.Identity.csproj
+++ b/MilkTeaShop/Infrastructure.Identity/Infrastructure.Identity.csproj
@@ -57,13 +57,9 @@
     <Compile Include="Adapter\IdentityAdapter.cs" />
     <Compile Include="Database\IdentityContext.cs" />
     <Compile Include="Database\IdentityProvider.cs" />
-    <Compile Include="Migrations\201807040728190_duong_04072018.cs" />
-    <Compile Include="Migrations\201807040728190_duong_04072018.Designer.cs">
-      <DependentUpon>201807040728190_duong_04072018.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201807090808242_duong_09072018.cs" />
-    <Compile Include="Migrations\201807090808242_duong_09072018.Designer.cs">
-      <DependentUpon>201807090808242_duong_09072018.cs</DependentUpon>
+    <Compile Include="Migrations\201807180649316_duong.cs" />
+    <Compile Include="Migrations\201807180649316_duong.Designer.cs">
+      <DependentUpon>201807180649316_duong.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Account.cs" />
@@ -85,13 +81,22 @@
       <Project>{7D7450C4-CA99-41E4-8A44-C3B072D0CEFF}</Project>
       <Name>Core.ObjectModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core.ObjectService\Core.ObjectService.csproj">
+      <Project>{C7ED8251-E1DD-44B9-8064-9EBDB035C0BF}</Project>
+      <Name>Core.ObjectService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Infrastructure.Entity\Infrastructure.Entity.csproj">
+      <Project>{1BD7026C-03EA-44A2-BE46-82A739E4EFFD}</Project>
+      <Name>Infrastructure.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Service.Business\Service.Business.csproj">
+      <Project>{0A6C36C7-DC02-47F3-B3F0-C23C10ED51E7}</Project>
+      <Name>Service.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201807040728190_duong_04072018.resx">
-      <DependentUpon>201807040728190_duong_04072018.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807090808242_duong_09072018.resx">
-      <DependentUpon>201807090808242_duong_09072018.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807180649316_duong.resx">
+      <DependentUpon>201807180649316_duong.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
