fix Client user update

--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,4 @@ MilkTeaShop/API.MilkteaClient/Web.config
 /MilkTeaShop/Infrastructure.Identity/Migrations/201807180649316_duong.cs
 /MilkTeaShop/Infrastructure.Identity/Migrations/201807180649316_duong.Designer.cs
 /MilkTeaShop/Infrastructure.Identity/Migrations/201807180649316_duong.resx
+/MilkTeaShop/API.MilkteaClient/Media/User
