--- a/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
+++ b/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Migrations\201807180706327_duong.Designer.cs">
       <DependentUpon>201807180706327_duong.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807230900241_duong1.cs" />
+    <Compile Include="Migrations\201807230900241_duong1.Designer.cs">
+      <DependentUpon>201807230900241_duong1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -80,6 +84,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201807180706327_duong.resx">
       <DependentUpon>201807180706327_duong.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807230900241_duong1.resx">
+      <DependentUpon>201807230900241_duong1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
